# TenNIS.jl

./: .gitignore  Project.toml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
benchmark/: benchmarks.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv
dev/reference/: index.html
docs/: Project.toml  make.jl  make_index.jl  make_readme.jl
docs/src/: reference.md
examples/: Project.toml  README.jl  example.py
previews/PR1/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR1/reference/: index.html
previews/PR2/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR2/reference/: index.html
pysrc/tennis/: __init__.py  juliapkg.json
pytest/: test_all.py
src/: TenNIS.jl
test/: Project.toml  test_aqua.jl  test_basics.jl
