[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennis"
version = "0.1.0"
dependencies = [
  "juliacall",
  #"triqs",
]
authors = [
  { name="Developers" },
]
description = "Tensor network impurity solver for TRIQS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["pysrc/tennis"]
